<resources>
    <string name="app_name">SHOP QN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="register">ĐĂNG KÝ</string>
    <string name="login_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="signup_login_hint">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="login_signup_hint">Bạn không có tài khoản? Đăng ký</string>
</resources>